# react-tetris

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  GITHUB-RELEASE.md  QA.md  README-EN.md  README.md  TAURI-ANDROID.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: android-release.yml  release.yml
e2e/: app.spec.ts
openspec/changes/add-comprehensive-test-suite/: design.md  proposal.md  tasks.md
openspec/changes/refactor-react19-jotai/: design.md  proposal.md  tasks.md
public/: loader.css
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/audio/: music.ts
src/components/: components.test.tsx
src/components/decorate/: Decorate.tsx
src/components/guide/: Guide.tsx
src/components/keyboard/: Button.tsx  Keyboard.tsx
src/components/logo/: Logo.tsx
src/components/matrix/: Matrix.tsx
src/components/music/: Music.tsx
src/domain/: block.test.ts  block.ts  const.ts  index.ts  matrix.test.ts  matrix.ts  score.ts  startMatrix.ts  types.ts
src/game/: controller.test.ts  controller.ts
src/i18n/: i18n.json  index.ts
src/input/: actions.ts  event.test.ts  event.ts  keyboard.test.ts  keyboard.ts  visibility.test.ts  visibility.ts
src/state/: atoms.ts  persist.test.ts  persist.ts  store.ts
src/styles/: _variables.scss  app.scss  loader.scss
src/test-hooks/: e2e.ts
src/test-utils/: store.ts
(+12 files in other folders)
